# imitate_mocap_repub

./: CMakeLists.txt  package.xml  settings.json
config/: frame_cfg.yaml
imitate_mocap_repub/: CMakeLists.txt  c_cpp_properties.json  package.xml
imitate_mocap_repub/src/: MotionRepub.cpp
src/: MotionRepub.cpp
